--- a/app/src/main/res/drawable/light_round_bg.xml
+++ b/app/src/main/res/drawable/light_round_bg.xml
@@ -2,6 +2,6 @@
 <shape android:shape="rectangle" xmlns:android="http://schemas.android.com/apk/res/android">
 
     <corners android:radius="8dp"/>
-    <solid android:color="#123456"/>
+    <solid android:color="@color/colorPrimary"/>
     <stroke android:color="#ffffff" android:width="1dp"/>
 </shape>
