--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -98,7 +98,7 @@
                 android:layout_alignParentStart="true"
                 android:layout_alignParentTop="true"
                 android:layout_margin="10dp"
-                android:background="@color/colorPrimary">
+                android:background="@drawable/bg_azkar_el_moslem">
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -116,7 +116,7 @@
                 android:layout_alignParentEnd="true"
                 android:layout_alignParentTop="true"
                 android:layout_margin="10dp"
-                android:background="@color/colorPrimary">
+                android:background="@drawable/bg_azkary">
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -134,7 +134,7 @@
                 android:layout_alignParentStart="true"
                 android:layout_below="@id/rlAzkarElMoslem"
                 android:layout_margin="10dp"
-                android:background="@color/colorPrimary">
+                android:background="@drawable/bg_werd">
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -152,7 +152,7 @@
                 android:layout_alignParentEnd="true"
                 android:layout_below="@id/rlAzkary"
                 android:layout_margin="10dp"
-                android:background="@color/colorPrimary">
+                android:background="@drawable/bg_settings">
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -164,13 +164,14 @@
             </RelativeLayout>
 
             <RelativeLayout
+
                 android:id="@+id/rlSebha"
                 android:layout_width="150dp"
                 android:layout_height="100dp"
                 android:layout_below="@id/rlSettings"
                 android:layout_centerHorizontal="true"
                 android:layout_margin="10dp"
-                android:background="@color/colorPrimary">
+                android:background="@drawable/bg_sebha">
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -188,7 +189,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
             ads:adSize="BANNER"
-            ads:adUnitId="ca-app-pub-3940256099942544/6300978111"/>
+            ads:adUnitId="ca-app-pub-3940256099942544/6300978111" />
 
     </LinearLayout>
 </android.support.v4.widget.NestedScrollView>
