--- a/app/src/main/res/layout/activity_werd_mohasba.xml
+++ b/app/src/main/res/layout/activity_werd_mohasba.xml
@@ -1,17 +1,56 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layoutDirection="ltr"
     android:orientation="vertical"
     android:textDirection="ltr">
 
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/colorPrimary">
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <TextView
+                style="@style/TextAppearance.AppCompat.Title"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerVertical="true"
+                android:text="ورد المحاسبة"
+                android:textColor="@color/white" />
+
+            <Button
+                android:id="@+id/btnReset"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentEnd="true"
+                android:layout_marginEnd="16dp"
+                android:background="@color/colorPrimary"
+                android:text="تفريغ الخانات"
+                android:textColor="@color/white" />
+
+            <Button
+                android:id="@+id/btnCalculate"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="4dp"
+                android:layout_toStartOf="@id/btnReset"
+                android:background="@color/colorPrimary"
+                android:text="إحتساب الورد"
+                android:textColor="@color/white" />
+        </RelativeLayout>
+    </android.support.v7.widget.Toolbar>
+
     <HorizontalScrollView
-        android:scrollbars="none"
         android:id="@+id/headerScroll"
         android:layout_width="match_parent"
-        android:layout_height="@dimen/header_height">
+        android:layout_height="@dimen/header_height"
+        android:scrollbars="none">
 
         <LinearLayout
             android:layout_width="wrap_content"
