--- a/app/src/main/res/layout/dialog_zekr_info.xml
+++ b/app/src/main/res/layout/dialog_zekr_info.xml
@@ -7,35 +7,34 @@
     android:textDirection="rtl">
 
     <ImageView
-        android:src="@drawable/img_zekr"
+        android:src="@drawable/img_info"
         android:id="@+id/img"
         android:layout_width="70dp"
         android:layout_height="90dp"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="16dp" />
 
-    <EditText
+    <TextView
         android:layout_below="@id/img"
-        android:id="@+id/edAddZekr"
+        android:id="@+id/tvZekrInfo"
         style="@style/TextAppearance.AppCompat.Medium"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
-        android:hint="أكتب نص الذكر هنا"
         android:textColor="@color/white"
         android:textColorHint="@color/white" />
 
     <Button
-        android:id="@+id/btnAddZekr"
+        android:id="@+id/btnOk"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@id/edAddZekr"
+        android:layout_below="@id/tvZekrInfo"
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="16dp"
         android:layout_marginTop="16dp"
         android:background="@color/white"
-        android:text="إضافة"
+        android:text="حسنا"
         android:textColor="@color/colorPrimaryDark" />
 </RelativeLayout>
