--- a/app/src/main/res/layout/overlay_layout.xml
+++ b/app/src/main/res/layout/overlay_layout.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/layout"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
@@ -9,18 +8,15 @@
     android:visibility="visible">
 
 
-
-
     <TextView
         android:id="@+id/txt_overlay"
-        android:layout_centerInParent="true"
-        android:text="naaaaaaaaaaaaaaader"
-        android:gravity="center"
-        android:textColor="@android:color/holo_red_dark"
-        android:background="@drawable/round_shape"
-        android:layout_margin="32dp"
-        android:padding="32dp"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:layout_margin="32dp"
+        android:background="@drawable/light_round_bg"
+        android:gravity="center"
+        android:padding="32dp"
+        android:textColor="@android:color/white" />
 
 </RelativeLayout>
